@@ -51,6 +51,7 @@
 * Added the support for glossy caustics rendering to Hybrid Back/Forward
 * Reworked the support for new visibility map cache for infinitelight, constantinfinite and sky2 light sources
 * Transparent light sources are now rendered with the correct intensity
+* New env. visibility map cache now supports persistent cache on file
 
 ### Fixed Bugs
 
